--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arima:wght@100..700&family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -12,20 +12,6 @@
 
 .text-shadow {
   text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
-}
-
-#quote {
-  background-image: url('/images/bg-quote.jpg');
-  background-size: cover;
-  background-position: center;
-}
-
-.shadow-1 {
-  box-shadow: -10px 10px 20px rgba(121, 121, 121, 0.2);
-}
-
-.shadow-2 {
-  box-shadow: -10px 10px 20px rgba(121, 121, 121, 0.2);
 }
 
 #liveStreaming {
